--- a/arch/arm/boot/dts/plum-ma.dts
+++ b/arch/arm/boot/dts/plum-ma.dts
@@ -175,6 +175,34 @@
 		};
 	};
 
+	leds_amp_wlan_ctrl: leds_amp_wlan_ctrl {
+		compatible = "gpio-leds";
+		status = "disabled";
+
+		led@PWRKEY {
+			label = "Mobile_PWRKEY";
+			gpios = <&gpiox_0x10 7 GPIO_ACTIVE_HIGH>;
+			linux,default-trigger = "oneshot";
+		};
+
+		led@RESETN {
+			label = "Mobile_RESETN";
+			gpios = <&gpiox_0x10 6 GPIO_ACTIVE_LOW>;
+			linux,default-trigger = "oneshot";
+		};
+
+		led@MobilePowerSel {
+			label = "Mobile_PowerSel";
+			gpios = <&gpiox_0x10 1 GPIO_ACTIVE_HIGH>;
+		};
+
+		led@MobilePower {
+			label = "Mobile_Power";
+			gpios = <&gpiox_0x10 0 GPIO_ACTIVE_HIGH>;
+			default-state = "on";
+		};
+};
+
 	leds_au: leds_au {
 		compatible = "gpio-leds";
 		status = "disabled";
@@ -435,7 +463,11 @@
 		xio_10 = &xio_0f_10;
 
 		xio_12 = &xio_12_15;
+		xio_13 = &xio_13_17;
+		xio_14 = &xio_13_17;
 		xio_15 = &xio_12_15;
+		xio_16 = &xio_13_17;
+		xio_17 = &xio_13_17;
 	};
 
 	/* XIO: (id: 0x02) FOMA only */
@@ -532,11 +564,18 @@
 	/* XIO: (id: 0x12/0x15) KYM_WLAN */
 	xio_12_15: xio@0x12_15 {
 		#size-cells = <0>;
-		devices = <&xio_di_supply &xio_adc_supply
-			   &spi1
-			   &gpiox_0x00 &gpiox_0x04_kym11 &gpiox_0x08_wlan &gpiox_0x0e_wlan
+		devices = <&gpiox_0x04_kym11
+			   &gpiox_0x08_wlan &gpiox_0x0e_wlan
 			   &gpiox_0x10_kymwlan &gpiox_0x12_kymwlan &gpiox_0x14
 			   &leds_mobile_wlan &leds_wlan_ctrl &leds_au_wlan_ctrl>;
+	};
+
+	/* XIO: (id: 0x13/0x14/0x16/0x17) AMP_WLAN */
+	xio_13_17: xio@0x13_17 {
+		#size-cells = <0>;
+		devices = <&gpiox_0x04_lisa
+			   &gpiox_0x08_wlan &gpiox_0x10 &gpiox_0x12 &gpiox_0x14
+			   &leds_amp_wlan_ctrl &leds_mobile_wlan &leds_wlan_ctrl>;
 	};
 };
 
@@ -1214,7 +1253,7 @@
 	};
 
 	/* KYM11 Mobile Status 1 (WLAN) */
-	gpiox_0x10_kymwlan: gpio@2,0x10 {
+	gpiox_0x10_kymwlan: gpio@2,0x10_KYM {
 		reg = <2 0x00000010 0x00000001>;
 		#gpio-cells = <2>;
 		compatible = "basic-mmio-gpio", "linux,basic-mmio-gpio";
@@ -1267,7 +1306,7 @@
 	};
 
 	/* KYM11 Mobile Status 2 (WLAN) */
-	gpiox_0x12_kymwlan: gpio@2,0x12 {
+	gpiox_0x12_kymwlan: gpio@2,0x12_KYM {
 		reg = <2 0x00000012 0x00000001>;
 		#gpio-cells = <2>;
 		compatible = "basic-mmio-gpio", "linux,basic-mmio-gpio";
