plum-MA: update default config.

--- a/arch/arm/configs/plum_MA_defconfig
+++ b/arch/arm/configs/plum_MA_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.14.27 Kernel Configuration
+# Linux/arm 3.14.33 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -259,7 +259,7 @@ CONFIG_MSDOS_PARTITION=y
 # CONFIG_ULTRIX_PARTITION is not set
 # CONFIG_SUN_PARTITION is not set
 # CONFIG_KARMA_PARTITION is not set
-# CONFIG_EFI_PARTITION is not set
+CONFIG_EFI_PARTITION=y
 # CONFIG_SYSV68_PARTITION is not set
 CONFIG_CMDLINE_PARTITION=y
 
@@ -2934,7 +2934,7 @@ CONFIG_UDF_NLS=y
 CONFIG_FAT_FS=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
-CONFIG_FAT_DEFAULT_CODEPAGE=437
+CONFIG_FAT_DEFAULT_CODEPAGE=932
 CONFIG_FAT_DEFAULT_IOCHARSET="euc-jp"
 # CONFIG_NTFS_FS is not set
 
