--- a/arch/arm/configs/plum_MA_defconfig
+++ b/arch/arm/configs/plum_MA_defconfig
@@ -1066,10 +1066,12 @@ CONFIG_BT_HCIVHCI=m
 # CONFIG_AF_RXRPC is not set
 CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
+CONFIG_WIRELESS_EXT=y
 CONFIG_WEXT_CORE=y
 CONFIG_WEXT_PROC=y
-CONFIG_CFG80211=y
-CONFIG_NL80211_TESTMODE=y
+CONFIG_WEXT_PRIV=y
+CONFIG_CFG80211=m
+# CONFIG_NL80211_TESTMODE is not set
 # CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
 # CONFIG_CFG80211_REG_DEBUG is not set
 # CONFIG_CFG80211_CERTIFICATION_ONUS is not set
@@ -1078,7 +1080,7 @@ CONFIG_CFG80211_DEBUGFS=y
 # CONFIG_CFG80211_INTERNAL_REGDB is not set
 CONFIG_CFG80211_WEXT=y
 # CONFIG_LIB80211 is not set
-CONFIG_MAC80211=y
+CONFIG_MAC80211=m
 CONFIG_MAC80211_HAS_RC=y
 CONFIG_MAC80211_RC_PID=y
 CONFIG_MAC80211_RC_MINSTREL=y
@@ -1514,7 +1516,7 @@ CONFIG_USB_NET_RNDIS_WLAN=m
 # CONFIG_RTL8187 is not set
 # CONFIG_MAC80211_HWSIM is not set
 CONFIG_ATH_COMMON=m
-CONFIG_ATH_CARDS=y
+CONFIG_ATH_CARDS=m
 # CONFIG_ATH_DEBUG is not set
 CONFIG_ATH9K_HW=m
 CONFIG_ATH9K_COMMON=m
@@ -1538,7 +1540,7 @@ CONFIG_CARL9170_HWRNG=y
 # CONFIG_HOSTAP is not set
 # CONFIG_LIBERTAS is not set
 # CONFIG_P54_COMMON is not set
-CONFIG_RT2X00=y
+CONFIG_RT2X00=m
 # CONFIG_RT2500USB is not set
 CONFIG_RT73USB=m
 CONFIG_RT2800USB=m
@@ -1556,7 +1558,12 @@ CONFIG_RT2X00_LIB_CRYPTO=y
 CONFIG_RT2X00_LIB_LEDS=y
 CONFIG_RT2X00_LIB_DEBUGFS=y
 # CONFIG_RT2X00_DEBUG is not set
-# CONFIG_RTL_CARDS is not set
+CONFIG_RTL_CARDS=m
+CONFIG_RTL8192CU=m
+CONFIG_RTLWIFI=m
+CONFIG_RTLWIFI_USB=m
+# CONFIG_RTLWIFI_DEBUG is not set
+CONFIG_RTL8192C_COMMON=m
 # CONFIG_WL_TI is not set
 # CONFIG_ZD1211RW is not set
 # CONFIG_MWIFIEX is not set
@@ -2443,7 +2450,7 @@ CONFIG_USB_TI_CPPI41_DMA=y
 # USB port drivers
 #
 CONFIG_USB_SERIAL=y
-# CONFIG_USB_SERIAL_CONSOLE is not set
+CONFIG_USB_SERIAL_CONSOLE=y
 # CONFIG_USB_SERIAL_GENERIC is not set
 # CONFIG_USB_SERIAL_SIMPLE is not set
 # CONFIG_USB_SERIAL_AIRCABLE is not set
@@ -2746,8 +2753,10 @@ CONFIG_USBIP_HOST=m
 # CONFIG_ECHO is not set
 # CONFIG_COMEDI is not set
 # CONFIG_RTLLIB is not set
-# CONFIG_R8712U is not set
-# CONFIG_R8188EU is not set
+CONFIG_R8712U=m
+CONFIG_R8188EU=m
+CONFIG_88EU_AP_MODE=y
+# CONFIG_88EU_P2P is not set
 # CONFIG_RTS5139 is not set
 # CONFIG_TRANZPORT is not set
 # CONFIG_LINE6_USB is not set
