--- a/arch/arm/boot/dts/qcom-ipq807x-hwk01.dts
+++ b/arch/arm/boot/dts/qcom-ipq807x-hwk01.dts
@@ -328,6 +328,24 @@
 		local-mac-address = [000000000000];
 	};
 
+	dp5 {
+		device_type = "network";
+		compatible = "qcom,nss-dp";
+		qcom,id = <5>;
+		reg = <0x3a003000 0x3fff>;
+		qcom,mactype = <1>;
+		local-mac-address = [000000000000];
+	};
+
+	dp6 {
+		device_type = "network";
+		compatible = "qcom,nss-dp";
+		qcom,id = <6>;
+		reg = <0x3a007000 0x3fff>;
+		qcom,mactype = <1>;
+		local-mac-address = [000000000000];
+	};
+
 	ess-switch@3a000000 {
 		compatible = "qcom,ess-switch";
 		reg = <0x3a000000 0x1000000>;
