clk: qcom: Add reset file for IPQ4019's global clock controller
Currently all IPQ4019 resets are defined in clock device tree
binding itself so this patch creates a new reset file for
IPQ4019 and moves all resets from clock file.

Change-Id: I87a7c60e53b8d434a80eca6772f9261114d02dd0
Signed-off-by: Abhishek Sahu <absahu@codeaurora.org>

--- a/arch/arm/boot/dts/qcom-ipq4019.dtsi
+++ b/arch/arm/boot/dts/qcom-ipq4019.dtsi
@@ -18,6 +18,7 @@
 
 #include "skeleton.dtsi"
 #include <dt-bindings/clock/qcom,gcc-ipq4019.h>
+#include <dt-bindings/reset/qcom,gcc-ipq4019.h>
 #include <dt-bindings/clock/qca,adcc-ipq4019.h>
 #include <dt-bindings/sound/ipq4019-audio.h>
 #include <dt-bindings/interrupt-controller/arm-gic.h>
