ipq807x: dts: Added USB controller and phy nodes
Added device tree nodes for DWC3 controller, High speed
and Super Speed Phy.

Change-Id: I67f4323016eab058ac1791d373919767a22491a0
Signed-off-by: Vasudevan Murugesan <vmuruges@codeaurora.org>
Signed-off-by: Saravanan Jaganathan <sjaganat@codeaurora.org>

--- a/arch/arm/boot/dts/qcom-ipq807x-hwk01.dts
+++ b/arch/arm/boot/dts/qcom-ipq807x-hwk01.dts
@@ -374,6 +374,18 @@
 		qcom,shaping-enabled;
 		qcom,wlan-dataplane-offload-enabled;
 	};
+
+	ssphy: ssphy@78000 {
+		status = "ok";
+	};
+
+	qusb_phy: qusb@79000 {
+		status = "ok";
+	};
+
+	usb3: usb3@8A00000 {
+		status = "ok";
+	};
 };
 
 &sdhc_1{
