--- a/arch/arm/boot/dts/qcom-ipq807x-soc.dtsi
+++ b/arch/arm/boot/dts/qcom-ipq807x-soc.dtsi
@@ -302,5 +302,171 @@
 				nand-bus-width = <8>;
 			};
 		};
+
+		ssphy: ssphy@78000 {
+			compatible = "qcom,usb-ssphy-qmp";
+			reg = <0x78000 0x45c>,
+				<0x0193f244 0x4>,
+				<0x0193f044 0x4>;
+			reg-names = "qmp_phy_base",
+				    "vls_clamp_reg",
+				    "tcsr_phy_clk_scheme_sel";
+			qcom,qmp-phy-init-seq = <0xac 0x14 0x1a 0x00
+						0x34 0x08 0x08 0x00
+						0x174 0x30 0x30 0x00
+						0x3c 0x06 0x06 0x00
+						0xb4 0x00 0x00 0x00
+						0xb8 0x08 0x08 0x00
+						0x194 0x06 0x06 0x3e8
+						0x19c 0x01 0x01 0x00
+						0x178 0x00 0x00 0x00
+						0xd0 0x82 0x82 0x00
+						0xdc 0x55 0x55 0x00
+						0xe0 0x55 0x55 0x00
+						0xe4 0x03 0x03 0x00
+						0x78 0x0b 0x0b 0x00
+						0x84 0x16 0x16 0x00
+						0x90 0x28 0x28 0x00
+						0x108 0x80 0x80 0x00
+						0x10c 0x00 0x00 0x00
+						0x184 0x0a 0x0a 0x00
+						0x4c 0x15 0x15 0x00
+						0x50 0x34 0x34 0x00
+						0x54 0x00 0x00 0x00
+						0xc8 0x00 0x00 0x00
+						0x18c 0x00 0x00 0x00
+						0xcc 0x00 0x00 0x00
+						0x128 0x00 0x00 0x00
+						0x0c 0x0a 0x0a 0x00
+						0x10 0x01 0x01 0x00
+						0x1c 0x31 0x31 0x00
+						0x20 0x01 0x01 0x00
+						0x14 0x00 0x00 0x00
+						0x18 0x00 0x00 0x00
+						0x24 0xde 0xde 0x00
+						0x28 0x07 0x07 0x00
+						0x48 0x0f 0x0f 0x00
+						0x70 0x0f 0x0f 0x00
+						0x100 0x80 0x80 0x00
+						0x440 0x0b 0x0b 0x00
+						0x4d8 0x02 0x02 0x00
+						0x4dc 0x6c 0x6c 0x00
+						0x4e0 0xbb 0xbb 0x00
+						0x508 0x77 0x77 0x00
+						0x50c 0x80 0x80 0x00
+						0x514 0x03 0x03 0x00
+						0x51c 0x16 0x16 0x00
+						0x448 0x75 0x75 0x00
+						0x454 0x00 0x00 0x00
+						0x40c 0x0a 0x0a 0x00
+						0x41c 0x06 0x06 0x00
+						0x510 0x00 0x00 0x00
+						0x268 0x45 0x45 0x00
+						0x2ac 0x12 0x12 0x00
+						0x294 0x06 0x06 0x00
+						0x254 0x00 0x00 0x00
+						0x8c8 0x83 0x83 0x00
+						0x8c4 0x02 0x02 0x00
+						0x8cc 0x09 0x09 0x00
+						0x8d0 0xa2 0xa2 0x00
+						0x8d4 0x85 0x85 0x00
+						0x880 0xd1 0xd1 0x00
+						0x884 0x1f 0x1f 0x00
+						0x888 0x47 0x47 0x00
+						0x80c 0x9f 0x9f 0x00
+						0x824 0x17 0x17 0x00
+						0x828 0x0f 0x0f 0x00
+						0x8b8 0x75 0x75 0x00
+						0x8bc 0x13 0x13 0x00
+						0x8b0 0x86 0x86 0x00
+						0x8a0 0x04 0x04 0x00
+						0x88c 0x44 0x44 0x00
+						0x870 0xe7 0xe7 0x00
+						0x874 0x03 0x03 0x00
+						0x878 0x40 0x40 0x00
+						0x87c 0x00 0x00 0x00
+						0x9d8 0x88 0x88 0x00
+						0xffffffff 0xffffffff 0x00 0x00>;
+			qcom,qmp-phy-reg-offset = <0x988 0x98c 0x990 0x994
+						0x974 0x8d8 0x8dc 0x804 0x800
+						0x808>;
+
+			clocks = <&gcc 0>,/*clk_gcc_usb3_aux_clk>,*/
+				 <&gcc 0>,/*clk_gcc_usb3_pipe_clk>,*/
+				 <&gcc 0>,/*clk_gcc_usb_phy_cfg_ahb_clk>,*/
+				 <&gcc 0>,/*clk_gcc_usb3_phy_reset>,*/
+				 <&gcc 0>,/*clk_gcc_usb3phy_phy_reset>,*/
+				 <&gcc 0>,/*clk_bb_clk1>,*/
+				 <&gcc 0>;/*clk_gcc_usb_ss_ref_clk>;*/
+
+			clock-names = "aux_clk", "pipe_clk", "cfg_ahb_clk", "phy_reset",
+				      "phy_phy_reset", "ref_clk_src", "ref_clk";
+
+			status = "disabled";
+		};
+
+		qusb_phy: qusb@79000 {
+			  compatible = "qcom,qusb2phy";
+			  reg = <0x079000 0x180>,
+				<0x08af8800 0x400>,
+				<0x01841030 0x4>,
+				<0x0193f044 0x4>;
+			  reg-names = "qusb_phy_base",
+				  "qscratch_base",
+				  "ref_clk_addr",
+				  "tcsr_phy_clk_scheme_sel";
+
+			  qcom,qusb-phy-init-seq = <0xF8 0x80
+				  0xB3 0x84
+				  0x83 0x88
+				  0xC0 0x8C
+				  0x30 0x08
+				  0x79 0x0C
+				  0x21 0x10
+				  0x14 0x9C
+				  0x9F 0x1C
+				  0x00 0x18>;
+			  phy_type= "utmi";
+
+			  clocks = <&gcc 0>, /*clk_bb_clk1*/
+				 <&gcc 0>, /*clk_gcc_qusb_ref_clk*/
+				 <&gcc 0>, /*clk_gcc_usb_phy_cfg_ahb_clk*/
+				 <&gcc 0>; /*clk_gcc_qusb2_phy_reset*/
+
+			  clock-names = "ref_clk_src", "ref_clk", "cfg_ahb_clk",
+				  "phy_reset";
+
+			status = "disabled";
+		};
+
+
+		usb3: usb3@8A00000 {
+			compatible = "qcom,dwc3";
+			#address-cells = <1>;
+			#size-cells = <1>;
+			ranges;
+			reg = <0x8AF8800 0x100>;
+			reg-names = "qscratch_base";
+			clocks = <&gcc 0>,/*GCC_USB3_MASTER_CLK*/
+				<&gcc 0>,/*GCC_USB3_SLEEP_CLK*/
+				<&gcc 0>;/*GCC_USB3_MOCK_UTMI_CLK>*/
+			clock-names = "master",
+				"sleep",
+				"mock_utmi";
+			qca,host = <1>;
+			status = "disabled";
+
+			dwc3@8A00000 {
+				compatible = "snps,dwc3";
+				reg = <0x8A00000 0xcd00>;
+				interrupts = <0 140 0>;
+				usb-phy = <&qusb_phy>, <&ssphy>;
+				tx-fifo-resize;
+				snps,usb3-u1u2-disable;
+				snps,nominal-elastic-buffer;
+				snps,is-utmi-l1-suspend;
+				snps,hird-threshold = /bits/ 8 <0x0>;
+			};
+		};
 	};
 };
