--- a/drivers/usb/phy/Makefile
+++ b/drivers/usb/phy/Makefile
@@ -27,3 +27,5 @@ obj-$(CONFIG_USB_RCAR_PHY)		+= phy-rcar-usb.o
 obj-$(CONFIG_USB_ULPI)			+= phy-ulpi.o
 obj-$(CONFIG_USB_ULPI_VIEWPORT)		+= phy-ulpi-viewport.o
 obj-$(CONFIG_KEYSTONE_USB_PHY)		+= phy-keystone.o
+obj-$(CONFIG_USB_QCOM_QUSB_PHY)		+= phy-msm-qusb.o
+obj-$(CONFIG_USB_QCOM_QMP_PHY)		+= phy-msm-ssusb-qmp.o
