ipq807x: usbphy: Added emulation support
The PHYs in emulation does not need init. These are
disabled when emulation is defined in DT.

Change-Id: I15949e3814565685fb3c053f901ff0dd9cf25c6c
Signed-off-by: Vasudevan Murugesan <vmuruges@codeaurora.org>
Signed-off-by: Saravanan Jaganathan <sjaganat@codeaurora.org>

--- a/arch/arm/boot/dts/qcom-ipq807x-hwk01.dts
+++ b/arch/arm/boot/dts/qcom-ipq807x-hwk01.dts
@@ -376,10 +376,12 @@
 	};
 
 	ssphy: ssphy@78000 {
+		qcom,emulation = <1>;
 		status = "ok";
 	};
 
 	qusb_phy: qusb@79000 {
+		qcom,emulation = <1>;
 		status = "ok";
 	};
 
