--- a/arch/arm/boot/dts/qcom-ipq807x-soc.dtsi
+++ b/arch/arm/boot/dts/qcom-ipq807x-soc.dtsi
@@ -305,6 +305,7 @@
 
 		ssphy: ssphy@78000 {
 			compatible = "qcom,usb-ssphy-qmp";
+			qcom,emulation = <1>;
 			reg = <0x78000 0x45c>,
 				<0x0193f244 0x4>,
 				<0x0193f044 0x4>;
@@ -407,6 +408,7 @@
 
 		qusb_phy: qusb@79000 {
 			  compatible = "qcom,qusb2phy";
+			  qcom,emulation = <1>;
 			  reg = <0x079000 0x180>,
 				<0x08af8800 0x400>,
 				<0x01841030 0x4>,
