dts: ipq807x: Add bridge-enable for nss
Change-Id: I5007192175be5734c35fbef4939926f54f7a78b7
Signed-off-by: Sakthi Vignesh Radhakrishnan <sradhakr@codeaurora.org>

--- a/arch/arm/boot/dts/qcom-ipq807x-hwk01.dts
+++ b/arch/arm/boot/dts/qcom-ipq807x-hwk01.dts
@@ -380,6 +380,7 @@
 		qcom,num-queue = <2>;
 		qcom,num-irq = <5>;
 		qcom,load-addr = <0x40000000>;
+		qcom,bridge-enabled;
 		qcom,ipv4-enabled;
 		qcom,ipv6-enabled;
 		qcom,wlanredirect-enabled;
