ARM: dts: qcom: Add SDCard entries for IPQ807x
Change-Id: I9534b4138786fd609f3faee81cca526ff8970b20
Signed-off-by: Sham Muthayyan <smuthayy@codeaurora.org>

--- a/arch/arm/boot/dts/qcom-ipq807x-soc.dtsi
+++ b/arch/arm/boot/dts/qcom-ipq807x-soc.dtsi
@@ -159,6 +159,51 @@
 			status = "disabled";
 		};
 
+		sdhc_2: sdhci@7864900 {
+			compatible = "qcom,sdhci-msm";
+			reg = <0x7864900 0x500>, <0x7864000 0x800>;
+			reg-names = "hc_mem", "core_mem";
+
+			interrupts = <0 125 0>, <0 221 0>;
+			interrupt-names = "hc_irq", "pwr_irq";
+
+			qcom,bus-width = <4>;
+			qcom,dedicated-io = <1>;
+
+			/* device core power supply */
+			qcom,vdd-voltage-level = <2950000 2950000>;
+			qcom,vdd-current-level = <15000 400000>;
+
+			/* device communication power supply */
+			qcom,vdd-io-lpm-sup;
+			qcom,vdd-io-voltage-level = <1800000 2950000>;
+			qcom,vdd-io-current-level = <200 22000>;
+			qcom,vdd-io-always-on;
+
+			qcom,cpu-dma-latency-us = <701>;
+			qcom,msm-bus,name = "sdhc2";
+			qcom,msm-bus,num-cases = <8>;
+			qcom,msm-bus,num-paths = <1>;
+			qcom,msm-bus,vectors-KBps = <81 512 0 0>, /* No vote */
+				<81 512 1046 3200>,    /* 400 KB/s*/
+				<81 512 52286 160000>, /* 20 MB/s */
+				<81 512 65360 200000>, /* 25 MB/s */
+				<81 512 130718 400000>, /* 50 MB/s */
+				<81 512 261438 800000>, /* 100 MB/s */
+				<81 512 261438 800000>, /* 200 MB/s */
+				<81 512 1338562 4096000>; /* Max. bandwidth */
+			qcom,bus-bw-vectors-bps = <0 400000 20000000 25000000 \
+						50000000 100000000 200000000 \
+						4294967295>;
+
+			clocks = <&gcc GCC_DUMMY_CLK>,
+				 <&gcc GCC_DUMMY_CLK>;
+			clock-names = "iface_clk", "core_clk";
+			qcom,large-address-bus;
+
+			status = "disabled";
+		};
+
 		tcsr_mutex_block: syscon@193d000 {
 			compatible = "syscon";
 			reg = <0x1905000 0x8000>;
