--- a/arch/arm/boot/dts/qcom-ipq807x-hwk01.dts
+++ b/arch/arm/boot/dts/qcom-ipq807x-hwk01.dts
@@ -27,6 +27,7 @@
 
 	aliases {
 		sdhc1 = &sdhc_1; /* SDC1 eMMC slot */
+		sdhc2 = &sdhc_2; /* SDC2 SD slot */
 	};
 
 	cpus {
@@ -395,5 +396,12 @@
 			 192000000 384000000>;
 	qcom,bus-speed-mode = "HS200_1p8v", "DDR_1p8v";
 	qcom,nonremovable;
+	status = "ok";
+};
+
+&sdhc_2{
+	qcom,clk-rates = <400000 25000000 50000000 100000000 \
+			 192000000 384000000>;
+	qcom,bus-speed-mode = "HS200_1p8v", "DDR_1p8v";
 	status = "ok";
 };
