ARM: dts: qcom: Add emulation entry to handle the PCIE link issue
In IPQ807x, the pcie links does not come up if the PCIE reset gpio is
toggled. This sequence suggested as per the HPG guide. This does not work
in the RUMI platform. So using the is_emulation flag to handle this issue.

Change-Id: I03324c7c296df489b20b65162cd90896eab9aa71
Signed-off-by: Sham Muthayyan <smuthayy@codeaurora.org>

--- a/arch/arm/boot/dts/qcom-ipq807x-soc.dtsi
+++ b/arch/arm/boot/dts/qcom-ipq807x-soc.dtsi
@@ -571,6 +571,7 @@
 				      "phy1";
 
 			perst-gpio = <&tlmm 58 1>;
+			is_emulation = <1>;
 			status = "disabled";
 		};
 
@@ -628,6 +629,7 @@
 				      "phy1";
 
 			perst-gpio = <&tlmm 61 1>;
+			is_emulation = <1>;
 			status = "disabled";
 		};
 	};
