ARM: dts: qcom: Add reset-cells for IPQ807x
Change-Id: I96e8c787851b2a3e058c0859b18423e5d1aad2d1
Signed-off-by: Sham Muthayyan <smuthayy@codeaurora.org>

--- a/arch/arm/boot/dts/qcom-ipq807x-soc.dtsi
+++ b/arch/arm/boot/dts/qcom-ipq807x-soc.dtsi
@@ -63,6 +63,7 @@
 			compatible = "qcom,gcc-ipq807x";
 			reg = <0x1800000 0x80000>;
 			#clock-cells = <0x1>;
+			#reset-cells = <1>;
 		};
 
 		serial@78af000 {
