add tty0tty (linux null modem emulator driver).
Signed-off-by: Takeyoshi Kikuchi <kikuchi@centurysys.co.jp>

--- a/drivers/tty/serial/Kconfig
+++ b/drivers/tty/serial/Kconfig
@@ -1515,6 +1515,10 @@ config SERIAL_ST_ASC_CONSOLE
 	depends on SERIAL_ST_ASC=y
 	select SERIAL_CORE_CONSOLE
 
+config SERIAL_TTY0TTY
+	tristate "Support for null modem emulator (tty0tty)"
+	depends on SERIAL_CORE
+
 endmenu
 
 endif # TTY
