--- a/arch/arm/boot/dts/qcom-ipq807x-soc.dtsi
+++ b/arch/arm/boot/dts/qcom-ipq807x-soc.dtsi
@@ -303,8 +303,8 @@
 			#size-cells = <0>;
 			reg = <0x78b6000 0x600>;
 			interrupts = <GIC_SPI 96 0x4>;
-			clocks = <&gcc GCC_DUMMY_CLK>,
-				<&gcc GCC_DUMMY_CLK>;
+			clocks = <&gcc GCC_I2C_CLK>,
+				<&gcc GCC_I2C_CLK>;
 			clock-names = "iface", "core";
 			clock-frequency  = <100000>;
 			dmas = <&blsp_dma 15>, <&blsp_dma 14>;
