dts: ip807x: Add ppe-enabled for nss
Changes add dts information for ppe enable.

Change-Id: I0c4e5ad573241cf69014c937d9e297867289ae98
Signed-off-by: Amit Gupta <amitgupt@codeaurora.org>

--- a/arch/arm/boot/dts/qcom-ipq807x-hwk01.dts
+++ b/arch/arm/boot/dts/qcom-ipq807x-hwk01.dts
@@ -386,6 +386,7 @@
 		qcom,tun6rd-enabled;
 		qcom,l2tpv2-enabled;
 		qcom,portid-enabled;
+		qcom,ppe-enabled;
 		qcom,pppoe-enabled;
 		qcom,pptp-enabled;
 		qcom,tunipip6-enabled;
