RISC-V: config: remove debug configuration options from MPFS
Minor cleanup to remove unnecessary debug configurations
from Icicle / MPFS.

Signed-off-by: Daire McNamara <daire.mcnamara@microchip.com>
Reviewed-by: Conor Dooley <conor.dooley@microchip.com>
Signed-off-by: Conor Dooley <conor.dooley@microchip.com>

--- a/arch/riscv/configs/mpfs_defconfig
+++ b/arch/riscv/configs/mpfs_defconfig
@@ -14,7 +14,7 @@ CONFIG_KALLSYMS_ALL=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_SOC_MICROCHIP_POLARFIRE=y
 CONFIG_SMP=y
-CONFIG_CMDLINE="earlycon debug uio_pdrv_genirq.of_id=generic-uio"
+CONFIG_CMDLINE="earlycon uio_pdrv_genirq.of_id=generic-uio"
 CONFIG_JUMP_LABEL=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
@@ -137,7 +137,6 @@ CONFIG_SCHED_STACK_END_CHECK=y
 CONFIG_SOFTLOCKUP_DETECTOR=y
 CONFIG_WQ_WATCHDOG=y
 CONFIG_SCHEDSTATS=y
-CONFIG_DEBUG_SPINLOCK=y
 CONFIG_STACKTRACE=y
 CONFIG_SAMPLES=y
 CONFIG_SAMPLE_RPMSG_CLIENT=m
