--- a/arch/riscv/configs/mpfs_defconfig
+++ b/arch/riscv/configs/mpfs_defconfig
@@ -96,6 +96,7 @@ CONFIG_UIO_MICROCHIP_CAN=y
 CONFIG_UIO_MICROCHIP_DMA=y
 CONFIG_MAILBOX=y
 CONFIG_POLARFIRE_SOC_MAILBOX=y
+CONFIG_SPARSEMEM_MANUAL=y
 CONFIG_MIV_IHC=y
 CONFIG_REMOTEPROC=y
 CONFIG_REMOTEPROC_CDEV=y
